--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <label for="gender">Sexo</label>
                             <select name="gender" id="gender">
                                 <option value="female">Feminino</option>
-                                <option value="male">Masulino</option>
+                                <option value="male">Masculino</option>
                                 <option value="na">Prefiro não responder</option>
                             </select>
                         </div>
